# OptiWindNet

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  _run_chain_tests.py  environment.yml  location_template.yaml  postBuild  pyproject.toml  requirements.txt
.github/workflows/: release.yml
artifacts/: timing_benchmark.py
docs/: Makefile  conf.py  features.rst  high_level_api.md  how_to_cite.rst  index.md  index.rst  installation.rst  low_level_api.md  notebooks_intro.rst  overview.md  paper.md  paper.rst  paper_experiments.rst  paper_intro.rst  requirements.txt  run_notebooks.py  setup.md  setup.rst  theory.md
docs/notebooks/: 00_Quickstart.ipynb  01-data_input.ipynb  02-included-locations.ipynb  03-example-Taylor-2023.ipynb  04-IEA_Wind_740-10-MW_Reference_Offshore_Wind_Plants.ipynb  05-Plotting.ipynb  11-HGS_Meta-heuristic.ipynb  12-EW_presolver.ipynb  12-LKH_Meta-heuristic.ipynb  13-CPEW.ipynb  13-Constructor.ipynb  14-Legacy_heuristics.ipynb  14-OBEW.ipynb  15-NBEW.ipynb  16-LKH_Meta-heuristic.ipynb  17-Path_insertion_constructor.ipynb  21-MILP_ortools_example.ipynb  22-MILP_gurobi_example.ipynb  23-MILP_cplex_example.ipynb  24-MILP_highs_example.ipynb  25-MILP_scip_example.ipynb  26-MILP_cbc_example.ipynb  41-Paper_3.1_Queiroga_2021_CVRP_instances.ipynb  42-Paper_3.2_MILP_model_comparison.ipynb  43-Paper_3.3_detours.4_HGSvsBnC.5_crossings.ipynb  44-Paper_3.6.1_Yi_2019_comparison.ipynb  45-Paper_3.6.2_Cazzaro_2022_fig6_comparison.ipynb  46-Paper_3.6.2_Cazzaro_2022G_comparison.ipynb  47-Paper_3.6.3_Taylor_2023_comparison.ipynb  OptiWindNet_basic.ipynb  OptiWindNet_ex1.ipynb  OptiWindNet_ex2.ipynb  OptiWindNet_run.py  Quickstart.ipynb  README.md  a01_data_input.ipynb  a02_WindFarmNetwork.ipynb  a03_load_repositories.ipynb  a04_Plotting.ipynb  a05_debugging.ipynb  (+81 more)
notebooks/: 01-data_input.ipynb  02-included-locations.ipynb  03-example-Taylor-2023.ipynb  04-IEA_Wind_740-10-MW_Reference_Offshore_Wind_Plants.ipynb  21-MILP_ortools_example.ipynb  22-MILP_gurobi_example.ipynb  23-MILP_cplex_example.ipynb  24-MILP_highs_example.ipynb  25-MILP_scip_example.ipynb  26-MILP_cbc_example.ipynb  OptiWindNet_basic.ipynb  OptiWindNet_run.py
optiwindnet/: ClassicEsauWilliams.py  CrossingPreventingEW.py  EW_presolver.py  NonBranchingEW.py  ObstacleBypassingEW.py  __init__.py  animation.py  api.py  api_utils.py  augmentation.py  clustering.py  crossings.py  fingerprint.py  geometric.py  importer.py  interarraylib.py  interface.py  mesh.py  pathfinding.py  plotting.py  repair.py  storagev0.py  storagev1.py  storagev2.py  svg.py  synthetic.py  terse.py  themes.py  types.py  utils.py  weighting.py
optiwindnet/MILP/: __init__.py  _core.py  _core.pyi  core.py  cplex.py  fscip.py  gurobi.py  ortools.py  pyomo.py  scip.py
optiwindnet/baselines/: __init__.py  _core.py  _core_hgs.py  hgs.py  lkh.py  utils.py
optiwindnet/data/: Albatros.osm.pbf  Amrumbank West.osm.pbf  Arkona.osm.pbf  BARD Offshore 1.osm.pbf  Baltic 2.osm.pbf  Baltic Eagle.osm.pbf  Beatrice.osm.pbf  Belwind.osm.pbf  Borkum Riffgrund 3.osm.pbf  CECEP Yangjiang Nanpeng Island.osm.pbf  CGN Rudong Demonstration.osm.pbf  Cazzaro-2022G-140.yaml  Cazzaro-2022G-210.yaml  Coastal Virginia.osm.pbf  Deutsche Bucht.osm.pbf  Dogger Bank B.osm.pbf  Dogger Bank C.osm.pbf  East Anglia THREE.osm.pbf  Fecamp.osm.pbf  Galloper Inner.osm.pbf  Gemini 1.osm.pbf  Gemini 2.osm.pbf  Global Tech 1.osm.pbf  Greater Changhua 1.osm.pbf  Gwynt y Mor.yaml  He Dreiht.osm.pbf  Hohe See.osm.pbf  Hollandse Kust Noord.osm.pbf  Hollandse Kust Zuid.osm.pbf  Hornsea 2.osm.pbf  Huizhou Gangkou 1.osm.pbf  Huizhou Gangkou 2.osm.pbf  Humber Gateway.osm.pbf  Inch Cape.osm.pbf  Kaskasi.osm.pbf  Kriegers Flak A.osm.pbf  Kriegers Flak B.osm.pbf  Laoting Bodhi Island.osm.pbf  Lillgrund.osm.pbf  Lincs.osm.pbf  (+38 more)
optiwindnet/db/: __init__.py  _core.py  migrate.py  model.py  model.pyi  modelv0.py  modelv1.py  modelv2.py  storage.py  storagev0.py  storagev1.py  storagev2.py
optiwindnet/heuristics/: ClassicEsauWilliams.py  CrossingPreventingEW.py  EW_presolver.py  NonBranchingEW.py  ObstacleBypassingEW.py  __init__.py  _deprecation.py  constructor.py  data_driven_hybrid.py  hybrid_learned.py  priorityqueue.py  stepreel.py
paper/: 3.1_Queiroga_2021_CVRP_instances.ipynb  3.2_MILP_model_comparison.ipynb  3.3_detours.4_HGSvsBnC.5_crossings.ipynb  3.6.1_Yi_2019_comparison.ipynb  3.6.2_Cazzaro_2022G_comparison.ipynb  3.6.2_Cazzaro_2022_fig6_comparison.ipynb  3.6.3_Taylor_2023_comparison.ipynb
tests/: 000_test_api.py  README.md  assertions.py  cases.py  conftest.py  helpers.py  importer_test.py  isolation.py  matrix.py  milp_reference_testing.py  milp_references.pkl  nodeset_digest-alias-coordinates.pkl  nodeset_digest-location-map.pkl  nodeset_digest_aliases.py  notebook_examination.ipynb  pathfinder_golden.pkl  paths.py  probe_milp_generation.py  producers.py  sitecache.py  sites.py  solutions.pkl  solver_topologies.pkl  solver_topologies.py  test_MILP.py  test_api.py  test_api_Router.py  test_api_WindFarmNetwork.py  test_api_utils.py  test_augmentation.py  test_baselines_utils.py  test_cases.py  test_clustering.py  test_constructor.py  test_crossings.py  test_db.py  test_db_modelv2.py  test_db_storagev2.py  test_end_to_end.py  test_fingerprint.py  (+31 more)
tests/fixtures/: generate_fixture.py  wf_network.pkl
tests/locations/: G_22822.pkl  G_33303.pkl  G_33372.pkl  G_35875.pkl
tests/test_files/: DTU_letters.osm.pbf  DTU_tests_1ss_100wt.osm - Copy.pbf  DTU_tests_1ss_10wt.osm.pbf  DTU_tests_1ss_300wt.osm.pbf  DTU_tests_1ss_40wt.osm.pbf  DTU_tests_2ss_40wt.osm.pbf  DTU_tests_4ss_40wt.osm.pbf  G_tests.pkl  Playing_with_db.ipynb  debugging.ipynb  dev_DTU_letters.ipynb  expected_DTU_letters.dill  expected_base.dill  expected_end_to_end.dill  expected_unittests.dill  expected_values.dill  expected_values_imported_functions.pkl  gen_DTU_letters.py  gen_expected_advance.py  gen_expected_base.py  gen_expected_end_to_end.py  gen_expected_unittests.py  generate_G_for_testing.ipynb  (+1 more)
(+15 files in other folders)
