[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "optiwindnet"
description = "Tools for optimizing the electrical cable network (collection system) for offshore wind power plants."
authors = [   { name="DTU Wind Energy"},   { name="Mauricio Souza de Alencar", email="ma___@dtu.dk" }, ]
dynamic = ["version"]
keywords = ["optimization", "wind farms", "routing"]
#license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = []

[project.urls]
'Documentation'= 'https://topfarm.pages.windenergy.dtu.dk/OptiWindNet/'
'Changelog'= 'https://topfarm.pages.windenergy.dtu.dk/OptiWindNet/notebooks/ChangeLog.html'
'Source code'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/OptiWindNet'
'Issue tracker'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/OptiWindNet/-/issues'

[project.optional-dependencies]
test  = [ 'pytest',  # for testing
          'pytest-cov',  # for calculating coverage
          'psutil',  # memory profiling
          'memory_profiler',  # memory profiling
          'line_profiler',  # to check speed
        ] 
docs = [
          'sphinx<=7.3.7',  # generating documentation
          'sphinx_rtd_theme',  # docs theme
          'ipywidgets',  # notebook widgets
          "numpydoc", 
          "nbsphinx", 
          "sphinx_copybutton", 
          "sphinx_sitemap", 
          "ipympl", 
          "ipykernel",
          "pypandoc",
          'sphinx-autoapi',
#          "topfarm",
#          "hydesign",
        ]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
  "requirements.txt",
  "environment.yml",
  "location_template.yml",
  "notebooks/*",
]


[tool.setuptools.package-data]
optiwindnet = []

[tool.setuptools_scm]
version_file = "optiwindnet/version.py"
