[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "optiwindnet"
description = "Tools for optimizing the electrical cable network (collection system) for offshore wind power plants."
authors = [   { name="DTU Wind Energy"},   { name="Mauricio Souza de Alencar", email="ma___@dtu.dk" }, ]
dynamic = ["version"]
keywords = ["optimization", "wind farms", "routing"]
#license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    'bidict~=0.23.1',
    'darkdetect~=0.8.0',
    'hygese @ git+https://github.com/mdealencar/PyHygese@scikit-build',
    'matplotlib~=3.10.1',
    'networkx~=3.4.2',
    'numba~=0.61.0',
    'numpy~=2.1.3',
    'ortools~=9.12.4544',
    'osmium~=4.0.2',
    'pony~=0.7.18',
    'py~=1.11.0',
    'Pyomo~=6.9.1',
    'PythonCDT @ git+https://github.com/artem-ogre/PythonCDT.git@13456f5',
    'PyYAML~=6.0.2',
    'scipy~=1.15.2',
    'shapely~=2.0.7',
    'svg.py~=1.6.0',
    'utm~=0.7.0',
]

[project.urls]
'Documentation'= 'https://topfarm.pages.windenergy.dtu.dk/OptiWindNet/'
'Changelog'= 'https://topfarm.pages.windenergy.dtu.dk/OptiWindNet/notebooks/ChangeLog.html'
'Source code'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/OptiWindNet'
'Issue tracker'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/OptiWindNet/-/issues'

[project.optional-dependencies]
test  = [ 'pytest',  # for testing
          'pytest-cov',  # for calculating coverage
          'psutil',  # memory profiling
          'memory_profiler',  # memory profiling
          'line_profiler',  # to check speed
        ] 
docs = [
          'sphinx<=7.3.7',  # generating documentation
          'sphinx_rtd_theme',  # docs theme
          'ipywidgets',  # notebook widgets
          "numpydoc", 
          "nbsphinx", 
          "sphinx_copybutton", 
          "sphinx_sitemap", 
          "ipympl", 
          "ipykernel",
          "pypandoc",
          'sphinx-autoapi',
#          "topfarm",
#          "hydesign",
        ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
  "requirements.txt",
  "environment.yml",
  "location_template.yml",
  "notebooks/*",
]

[tool.setuptools.package-data]
optiwindnet = ['data/*']

[tool.setuptools_scm]
version_file = "optiwindnet/version.py"
