[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optiwindnet"
description = "Tools for optimizing the electrical cable network (collection system) for offshore wind power plants."
authors = [   { name="DTU Wind Energy"},   { name="Mauricio Souza de Alencar", email="ma___@dtu.dk" }, ]
dynamic = ["version"]
keywords = ["optimization", "windfarm", "network", "routing"]
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">= 3.10"
dependencies = [
    "backports.strenum (>=1.3.1) ; python_version < '3.11'",
    'bidict >=0.23.1',
    'bitarray >=3.4.2',
    'condeltri >=0.0.2',
    'darkdetect >=0.8.0',
    'esy.osm.pbf >=0.1.1',
    'hybgensea >=0.0.1',
    'makefun >=1.15.6',
    'matplotlib >=3.10.1',
    'networkx >=3.4.2',
    'numba >=0.60',
    'numpy >=2.0,<2.3',  # upper bound due to numba
    'ortools >=9.12.4544',
    'pony >=0.7.18',
    'py >=1.11.0',
    'Pyomo >=6.9',
    'PyYAML >=6.0.2',
    'pyyaml-include >=2.1',
    'scipy >=1.15.2',
    'shapely >=2.0.7',
    'svg.py >=1.6.0',
    'utm >=0.7',
]

[project.urls]
'Documentation'= 'https://optiwindnet.readthedocs.io/'
# 'Changelog'= 'https://topfarm.pages.windenergy.dtu.dk/OptiWindNet/'
'Source code'= 'https://gitlab.windenergy.dtu.dk/TOPFARM/OptiWindNet'
'Issue tracker'= 'https://github.com/DTUWindEnergy/OptiWindNet/issues'

[project.optional-dependencies]
test  = [ 'pytest',  # for testing
          'pytest-cov',  # for calculating coverage
          'psutil',  # memory profiling
          'memory_profiler',  # memory profiling
          'line_profiler',  # to check speed
        ] 
docs = [
          'sphinx',
          'nbsphinx', 
          'myst-parser',
          'myst-nb',
          'furo',
          'sphinx-versioned-docs',
          'sphinx-autoapi',
          'sphinx_copybutton', 
          'sphinx_sitemap', 
          'pypandoc',
          'setuptools-scm',
        ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["optiwindnet", "optiwindnet/**/*"]
# exclude = []

[tool.setuptools.package-data]
optiwindnet = ['data/*']

[tool.setuptools_scm]
version_file = "optiwindnet/version.py"

[tool.black]
skip-string-normalization = true

[tool.ruff.format]
quote-style = "single"
